package projects;

public interface IComponent {
    String getName();

    int countOfTasks();

    int getEstimate();
}
